terraform/modules/vpc/vpc.tf
resource "aws_vpc" "this" {
  cidr_block = var.vpc_cidr_block

  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name      = "vpc"
    ManagedBy = "terraform"
  }
}
